--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "license": "ISC",
   "devDependencies": {
     "grunt": "^1.0.3"
+  },
+  "dependencies": {
+    "grunt-screeps": "^1.4.0"
   }
 }
